mdt_cli/tests/snapshots/update__update_warns_missing_provider.snap
---
source: mdt_cli/tests/update.rs
info:
  program: mdt
  args:
    - "--path"
    - /var/folders/lm/90xr38kd5y52p5y6jj2ny_dr0000gn/T/.tmpkqWoLg
    - update
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
All consumer blocks are already up to date.

----- stderr -----
warning: consumer `orphan` at readme.md:1:1 has no provider
